--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.cdnfonts.com/css/poppins');
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  
+  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
+  font-family: 'Poppins', sans-serif, Inter, system-ui;
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: lighter;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -28,6 +32,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 h1 {
