--- a/front-end/src/pages/CadastroReuniao/CadastroReuniao.css
+++ b/front-end/src/pages/CadastroReuniao/CadastroReuniao.css
@@ -1,7 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 
-body {
+#root { /* Removendo o padding e margem da div root */
+    padding: 0;
+    margin: 0;
+}
+
+.cadastro-reuniao-section {
     background: linear-gradient(to bottom, #1F2448, #7FA0A8, #FFFFFF, #7FA0A8, #1F2448);
+    min-height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 
 #titulo-cadastro-reuniao {
