--- a/front-end/src/pages/AceiteJustificativa/AceiteJustificativa.css
+++ b/front-end/src/pages/AceiteJustificativa/AceiteJustificativa.css
@@ -110,7 +110,7 @@
 
 /* Media Query para telas maiores */
 @media (min-width: 1024px) {
-    .justificativa-falta {
-        width: 50%;
+    .paragrafo-justificativa-falta {
+        width: 40%;
     }
 }
