--- a/front-end/src/pages/PermitirLogin/PermitirLogin.css
+++ b/front-end/src/pages/PermitirLogin/PermitirLogin.css
@@ -1,11 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 
-#root {
-    padding: 0;
-    margin: 0;
-    overflow-x: hidden; /* Impede o scroll horizontal na página inteira */
-}
-
 .permitir-login-section {
     background-color: #2E3567;
     display: flex;
@@ -13,12 +7,13 @@
     align-items: center;
     padding: 0;
     height: 100vh;
+    width: 100vw;
     overflow: hidden;
 }
 
 .container-button-titulo {
     background-color: #1F2448;
-    width: 100%;
+    width: 100vw;
     height: 130px;
     display: flex;
     flex-direction: column;
@@ -45,16 +40,4 @@
     padding: 10px;
     background-color: #2E3567;
     overflow-y: auto; /* Permite o scroll vertical */
-}
-
-/* Media Query para telas maiores */
-@media (min-width: 1024px) {
-    .container-possiveis-usuarios {
-        width: 80%; /* Ajusta a largura do contêiner dos cards */
-    }
-    
-    .card-possivel-usuario {
-        width: 100%; /* Faz com que os cards ocupem toda a largura do contêiner */
-        max-width: 300px; /* Define uma largura máxima para os cards */
-    }
 }
