--- a/front-end/src/pages/EscolherCargos/EscolherCargos.css
+++ b/front-end/src/pages/EscolherCargos/EscolherCargos.css
@@ -6,7 +6,8 @@
     flex-direction: column;
     align-items: center;
     padding: 0;
-    height: 100vh;
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
     width: 100vw;
     overflow: hidden;
 }
