--- a/front-end/src/pages/PermitirLogin/PermitirLogin.css
+++ b/front-end/src/pages/PermitirLogin/PermitirLogin.css
@@ -1,12 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 
 .permitir-login-section {
+    /* position: fixed;
+    top: 0; */
     background-color: #2E3567;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 0;
-    height: 100vh;
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
     width: 100vw;
     overflow: hidden;
 }
