--- a/front-end/src/pages/Cadastro/Cadastro.css
+++ b/front-end/src/pages/Cadastro/Cadastro.css
@@ -28,6 +28,7 @@
     border: none;
     background: rgb(0,204,153);
     background: linear-gradient(0deg, rgba(0,204,153,1) 0%, rgba(102,0,255,1) 100%); 
+    padding: 1rem 0;
 }
 
 .Cadastro button:active{
