feat: botao do menu exportado do figma

--- a/front-end/src/components/MenuButton/MenuButton.css
+++ b/front-end/src/components/MenuButton/MenuButton.css
@@ -12,9 +12,9 @@
     cursor: pointer;
 }
 
-.bar {
+/* .bar {
     width: 30px;
     height: 3px;
     background: white;
     margin: 5px 0;
-}  
+}   */
