--- a/front-end/src/components/HeaderPage/HeaderPage.css
+++ b/front-end/src/components/HeaderPage/HeaderPage.css
@@ -1,15 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 
-.aceite-justificativa-section {
+.headerpage-container {
     background-color: #1F2448;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center; /* Centraliza horizontalmente */
     justify-content: center; /* Centraliza verticalmente */
     margin: 0;
-    padding: 0;
+    padding: 0 0 1rem 0;
     overflow: hidden;
 }
   
