--- a/front-end/src/pages/Justificativa/Justificativa.css
+++ b/front-end/src/pages/Justificativa/Justificativa.css
@@ -2,6 +2,9 @@
     width: 100vw;
     height: 100vh;
     position: absolute;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     top: 0;
     left: 0;
     background-color: #2E3567;
@@ -10,6 +13,7 @@
 .Header-consulta-justificativa{
     width: 100%;
     height: 17%;
+    margin-bottom: 5vh;
     color: #f2f2f2;
     background-color: #1F2448;
 }
