--- a/front-end/src/pages/AceiteJustificativa/AceiteJustificativa.css
+++ b/front-end/src/pages/AceiteJustificativa/AceiteJustificativa.css
@@ -18,11 +18,11 @@
     overflow: hidden;
 }
   
-.perfil-imagem {
+/* .perfil-imagem {
     width: 125px;
     height: auto;
     margin-top: 70px;
-}
+} */
 
 #titulo-nome-perfil {
     font-family: 'Poppins', sans-serif;
