--- a/front-end/src/components/CardMembrosJustificativas/CardMembrosJustificativas.css
+++ b/front-end/src/components/CardMembrosJustificativas/CardMembrosJustificativas.css
@@ -1,7 +1,8 @@
 .Card-Membros-Justificativas{
     width: 80%;
-    height: 5vh;
+    height: auto;
     margin: 1vh 0;
+    padding: 1vh 0;
     border-radius: 8px;
     display: flex;
     justify-content: space-between;
@@ -10,10 +11,11 @@
 }
 
 .Card-Membros-Justificativas h5{
-    margin-left: 2vh;
+    margin: 0 0 0 2vh;
     font-weight: 400;
 }
 
 .Card-Membros-Justificativas i{
     margin-right: 2vh;
+    cursor: pointer;
 }
