--- a/front-end/src/components/CardMembrosPresencas/CardMembrosPresencas.css
+++ b/front-end/src/components/CardMembrosPresencas/CardMembrosPresencas.css
@@ -1,6 +1,7 @@
 .Card-Membros-Presencas{
     width: 80%;
-    height: 5vh;
+    height: auto;
+    padding: 1vh;
     margin: 1vh 0;
     border-radius: 8px;
     display: flex;
@@ -10,10 +11,11 @@
 }
 
 .Card-Membros-Presencas h5{
-    margin-left: 2vh;
+    margin: 0 0 0 2vh;
     font-weight: 400;
 }
 
 .Card-Membros-Presencas i{
     margin-right: 2vh;
+    cursor: pointer;
 }
