--- a/front-end/src/pages/Presenca/Presenca.css
+++ b/front-end/src/pages/Presenca/Presenca.css
@@ -12,7 +12,7 @@
 
 .Header-consulta-presenca{
     width: 100%;
-    height: 17%;
+    height: auto;
     margin-bottom: 5vh;
     color: #f2f2f2;
     background-color: #1F2448;
