--- a/front-end/src/components/CardPorcentagemPresenca/CardPorcentagemPresenca.css
+++ b/front-end/src/components/CardPorcentagemPresenca/CardPorcentagemPresenca.css
@@ -31,13 +31,15 @@
     justify-content: center;
     align-items: center;
     flex-direction: row;
+    gap: 3vh;
+    margin-bottom: 2vh;
 }
 
 .Card-porcentagem-presenca-circulo{
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    margin: 0 3vh 3vh 0;
+    /* margin: 0 3vh 3vh 0; */
     display: flex;
     align-items: center;
     justify-content: center;
