--- a/front-end/src/components/CardReuniaoGeral/CardReuniaoGeral.css
+++ b/front-end/src/components/CardReuniaoGeral/CardReuniaoGeral.css
@@ -1,7 +1,7 @@
 .Card-reuniao-geral{
-    width: 80%;
+    width: 90%;
     height: auto;
-    border-radius: 8px;
+    border-radius: 8px 8px 0 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -21,14 +21,14 @@
 }
 
 .Card-expansivo-reuniao-geral{
-    width: 80%;
+    width: 90%;
     height: auto;
     padding: 1vh 0 1vh 0;
     margin-bottom: 2vh;
     display: flex;
     align-items: center;
     flex-direction: column;
-    border-radius: 8px;
+    border-radius: 0 0 8px 8px;
     overflow:auto;
     background-color: #5A63A8;
 }
