--- a/front-end/src/pages/PresencaIndividual/PresencaIndividual.css
+++ b/front-end/src/pages/PresencaIndividual/PresencaIndividual.css
@@ -1,6 +1,7 @@
 .Presenca-individual{
     width: 100vw;
     height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     position: absolute;
     top: 0;
     left: 0;
@@ -14,6 +15,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    
 }
 
 .Presenca-individual-dados-titulo{
@@ -27,8 +29,16 @@
     justify-content: center;
 }
 
+.Presenca-individual-mensagem {
+    position: absolute;
+    bottom: 0;
+}
+
 .Presenca-individual-mensagem h5{
-    padding-top: 8vh;
+    /* padding-top: 8vh; */
+   
+    
+    /* bottom: 0; */
     font-weight: 300;
     color: #D4FBF7;
 }
