--- a/front-end/src/pages/CadastrarPresenca/CadastrarPresenca.css
+++ b/front-end/src/pages/CadastrarPresenca/CadastrarPresenca.css
@@ -1,5 +1,7 @@
 .cadastrar-presenca-section {
     width: 100vw;
+    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     display: flex;
     flex-direction: column;
     align-items: center;
