--- a/front-end/src/pages/Justificativa/Justificativa.css
+++ b/front-end/src/pages/Justificativa/Justificativa.css
@@ -14,6 +14,7 @@
 .Header-consulta-justificativa{
     width: 100%;
     height: auto;
+    padding-top: 2.5rem;
     margin-bottom: 5vh;
     color: #f2f2f2;
     background-color: #1F2448;
